--- a/tests/functional/registration/projects/flow_codegen/pyproject.toml
+++ b/tests/functional/registration/projects/flow_codegen/pyproject.toml
@@ -1,11 +1,16 @@
 [project]
-name = "flow_codegen"
+name = "flow-codegen"
+description = "Flow code generator"
 version = "1.0.0"
 
 dependencies = [
     "textX",
     "click"
 ]
+
+[build-system]
+build-backend = "flit_core.buildapi"
+requires = ["flit_core >=3.8.0,<4"]
 
 [project.entry-points.textx_generators]
 flow_dsl_plantuml = "flow_codegen.generators:flow_pu"
