--- a/tests/functional/registration/projects/types_dsl/pyproject.toml
+++ b/tests/functional/registration/projects/types_dsl/pyproject.toml
@@ -1,10 +1,15 @@
 [project]
-name = "types_dsl"
+name = "types-dsl"
+description = "Types DSL"
 version = "1.0.0"
 
 dependencies = [
     "textX"
 ]
+
+[build-system]
+build-backend = "flit_core.buildapi"
+requires = ["flit_core >=3.8.0,<4"]
 
 [project.entry-points.textx_languages]
 types_dsl = "types_dsl:types_dsl"
