--- a/tests/functional/subcommands/example_project/pyproject.toml
+++ b/tests/functional/subcommands/example_project/pyproject.toml
@@ -1,10 +1,15 @@
 [project]
-name = "textX-subcommand-test"
+name = "textx-subcommand-test"
+description = "Test project for textX subcommands"
 version = "1.0.0"
 
 dependencies = [
     "textX"
 ]
+
+[build-system]
+build-backend = "flit_core.buildapi"
+requires = ["flit_core >=3.8.0,<4"]
 
 [project.entry-points.textx_commands]
 testcommand = "textx_subcommand_test.cli:testcommand"
