--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "textX"
-version = "4.1.0.dev0"
+version = "4.0.1"
 description = "Meta-language for DSL implementation inspired by Xtext"
 authors = [
     {name = "Igor R. Dejanović", email = "igor.dejanovic@gmail.com"},
