--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches-ignore:
       - 'gh-pages'
+    paths:
+      - 'textx/**'
+      - 'tests/**'
+      - 'examples/**'
+      - '.github/workflows/tests.yml'
   pull_request:
 
 jobs:
