docs: trigger pages build on merge/push to master

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,8 +3,7 @@ name: Deploy textX docs to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    #branches: [$default-branch]
-    branches: [mdbook-docs]
+    branches: [$default-branch]
     paths:
       - 'docs/**'
       - '.github/workflows/docs.yml'
