--- a/docs/book.toml
+++ b/docs/book.toml
@@ -1,5 +1,6 @@
 [book]
 authors = ["Igor Dejanović and contributors"]
+description = "A meta-language for building Domain-Specific Languages (DSLs)"
 language = "en"
 multilingual = false
 src = "src"
