--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,16 +35,12 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Build with mdBook
         run: |
-          cd docs
+          cd p/docs
           mdbook build
-          pwd
-          ls -la
-          ls -la book/images
-          ls -la src/images
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./docs/book
+          path: ./p/docs/book
 
   # Deployment job
   deploy:
