ci: run tests on pyproject.toml update

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,7 @@ on:
       - 'textx/**'
       - 'tests/**'
       - 'examples/**'
+      - 'pyproject.toml'
       - '.github/workflows/tests.yml'
   pull_request:
 
