chn: from click.echo to logging

--- a/tests/functional/registration/projects/flow_codegen/pyproject.toml
+++ b/tests/functional/registration/projects/flow_codegen/pyproject.toml
@@ -4,8 +4,7 @@ description = "Flow code generator"
 version = "1.0.0"
 
 dependencies = [
-    "textX",
-    "click"
+    "textX"
 ]
 
 [build-system]
