--- a/tests/functional/registration/projects/data_dsl/pyproject.toml
+++ b/tests/functional/registration/projects/data_dsl/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "types_dsl"
 ]
 
+[tool.uv.sources]
+textx = { workspace = true }
+
 [build-system]
 build-backend = "flit_core.buildapi"
 requires = ["flit_core >=3.8.0,<4"]
