--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,18 +30,8 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
-      - uses: cachix/install-nix-action@v31
-        with:
-          nix_path: nixpkgs=channel:nixos-24.11
-
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/nix
-            /nix/var/nix/profiles/per-user/$USER
-          key: nix-${{ runner.os }}-${{ hashFiles('docs/flake.nix') }}
-          restore-keys: |
-            nix-${{ runner.os }}-
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Build with mdBook via Nix
         run: |
