--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,7 @@ jobs:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
+      - uses: extractions/setup-just@v3
       - uses: actions/checkout@v4
 
       - name: Install uv
@@ -36,7 +37,7 @@ jobs:
 
       - name: Run tests
         run: |
-          make check
+          just check
 
       - name: Upload coverage data to coveralls.io
         env:
