ci: run ci pipeline on justfile change

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,7 @@ on:
       - 'tests/**'
       - 'examples/**'
       - 'pyproject.toml'
+      - 'justfile'
       - '.github/workflows/tests.yml'
   pull_request:
 
